--- a/files/pages/my/my.wxss
+++ b/files/pages/my/my.wxss
@@ -3,8 +3,9 @@
 page {
   background-color: #f5f6f9;
 }
-
 .my-header {
+  justify-content: center;
+  align-items: center;
   display: flex;
   width: 100%;
   height: 216rpx;
